@@ -12,6 +12,11 @@
 	  <version>1.0-SNAPSHOT</version>
 	</parent>
 	<repositories>
+		<repository>
+            <id>apache-m2-snapshot</id>
+            <name>Apache Snapshot Repository</name>
+            <url>https://repository.apache.org/content/groups/snapshots</url>
+        </repository>
         <repository>
 		    <id>snapshots</id>
 		    <name>erebe-vm23-snapshots</name>
@@ -63,23 +68,23 @@
 	  <finalName>integration</finalName>
 	  <plugins>
 		<plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-surefire-plugin</artifactId>
-		<version>2.17</version>
-		<configuration>
-		<reuseForks>false</reuseForks>
-		<excludes>
-		<exclude>**/*IntegrationTest.java</exclude>
-		</excludes>
-		</configuration>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-surefire-plugin</artifactId>
+			<version>2.17</version>
+			<configuration>
+				<reuseForks>false</reuseForks>
+			</configuration>
 			<executions>
 				<execution>
 					<id>integration-test</id>
 					<goals>
-						<goal>test</goal>
+                        <goal>test</goal>
 					</goals>
 					<phase>integration-test</phase>
 					<configuration>
+						<sources>
+							<source>src/test/java/integration</source>
+						</sources>
 						<excludes>
 							<exclude>**/*Test.java</exclude>
 						</excludes>
@@ -90,6 +95,27 @@
 				</execution>
 			</executions>
 		</plugin>
+		
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.openejb.maven</groupId>
+                <artifactId>tomee-maven-plugin</artifactId>
+                <version>${versions.tomee.embedded}</version>
+                <configuration>
+                    <!-- From TomEE to TomEE+ to support the web services stack -->
+                    <tomeeClassifier>plus</tomeeClassifier>
+                    <args>-Xmx512m -XX:PermSize=256m</args>
+                    <deployOpenEjbApplication>true</deployOpenEjbApplication>
+                </configuration>
+            </plugin>
 	  </plugins>
 	</build>
 </project>
